# Smart-Business-

./: .gitignore  HELP.md  LICENSE  README.md  docker-compose.yml
backend/: Cargo.toml
backend-java/smart-business/: build.gradle
backend-java/smart-business/src/main/resources/: application.yml
backend-java/smart-business/src/test/resources/: application.yml
backend/src/: main.rs
backend/src/application/use_cases/: criar_venda.rs  criar_venda_test.rs  mod.rs
backend/src/domain/: mod.rs
backend/src/domain/entidades/: mod.rs  venda.rs
backend/src/domain/erros/: erro_dominio.rs  mod.rs
backend/src/domain/value_objects/: dinheiro.rs  mod.rs
backend/src/infrastructure/: mod.rs
backend/src/infrastructure/database/: mod.rs  venda_repositorio_postgres.rs
backend/src/ports/: mod.rs
backend/src/ports/repositorios/: mod.rs  venda_repositorio.rs
docs/: arquitetura.md  como_rodar.md  fluxo_venda.md  padroes.md  rust_basico.md  visao_geral.md
frontend/: pom.xml
frontend/src/main/resources/: application.properties
frontend/src/main/resources/static/css/: pdv.css
frontend/src/main/resources/templates/: login.html
frontend/src/main/resources/templates/clientes/: form.html  lista.html
frontend/src/main/resources/templates/empresa/: form.html
frontend/src/main/resources/templates/financeiro/: lista.html
frontend/src/main/resources/templates/fragments/: head.html  (+2 more)
src/main/resources/: application.properties
src/main/resources/static/css/: login.css
src/main/resources/static/js/: app.js  pdv.js
src/main/resources/templates/: cadastro.html
(+161 files in other folders)
