[package]
name = "backend"
version = "0.1.0"
edition = "2024"

[dependencies]
async-trait = "0.1.89"
axum = "0.8.8"
dotenv = "0.15.0"
sqlx = { version = "0.8.6", features = ["runtime-tokio", "postgres", "macros", "uuid"] }
tokio = { version = "1.50.0", features = ["full"] }
uuid = { version = "1.22.0", features = ["v4"] }
